syntax = "proto3";

package Auth;

import "Schema/UserSchema.proto";

message GetAuthRequest{
  string token = 1;
  string type = 2;
}

message GetAuthResponse{
  string token = 1;
  Schema.UserSchema user = 2;
}

message SetAuthRequest{
  string email = 1;
  string password = 2;
  string type = 3;
}

message SetAuthResponse{
  string token = 1;
  Schema.UserSchema user = 2;
}

message DeleteAuthRequest{
  string token = 1;
}

message DeleteAuthResponse{
  bool deleted = 1;
}

message DeleteAllAuthByIdRequest{
  string id = 1;
}

message DeleteAllAuthByIdResponse{
  bool deleted = 1;
}

service Auth{
  //Un
  rpc GetAuth (GetAuthRequest) returns (GetAuthResponse) {};

  rpc SetAuth (SetAuthRequest) returns (SetAuthResponse) {};

  rpc DeleteAuth (DeleteAuthRequest) returns (DeleteAuthResponse) {};

  rpc DeleteAuthById (DeleteAllAuthByIdRequest) returns (DeleteAllAuthByIdResponse) {};

}

